html special character bug fix on mobile

--- a/src/components/votesBar/votesBar.scss
+++ b/src/components/votesBar/votesBar.scss
@@ -30,6 +30,7 @@
   margin: 0 auto -89px;
   font-size: 36px;
   color: #000;
+  font-family: sans-serif;
   @media screen and (max-width: 450px) {
     margin-bottom: -83px;
   }
